[gd_scene load_steps=9 format=3 uid="uid://dwt75156bpkf3"]

[ext_resource type="Script" path="res://scenes/ui/player_ui.gd" id="1_68kl0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0wiym"]
bg_color = Color(0, 0, 0, 0.490196)
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_40m5t"]
bg_color = Color(0.667365, 0.0290831, 0.0161258, 1)
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w1wfi"]
bg_color = Color(0, 0, 0, 0.490196)
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vx7s"]
bg_color = Color(0, 0.227451, 0.752941, 1)
corner_detail = 20

[sub_resource type="Animation" id="Animation_tc3yg"]
resource_name = "HealthFlash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HealthBar:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.667365, 0.0290831, 0.0161258, 1), Color(1, 1, 1, 1), Color(0.667365, 0.0290831, 0.0161258, 1)]
}

[sub_resource type="Animation" id="Animation_2oepv"]
resource_name = "StaminaFlash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StaminaBar:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0.227451, 0.752941, 1), Color(1, 1, 1, 1), Color(0, 0.227451, 0.752941, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_73srf"]
_data = {
"HealthFlash": SubResource("Animation_tc3yg"),
"StaminaFlash": SubResource("Animation_2oepv")
}

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_68kl0")

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0.667365, 0.0290831, 0.0161258, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -329.0
offset_top = 17.0
offset_right = 331.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_0wiym")
theme_override_styles/fill = SubResource("StyleBoxFlat_40m5t")
value = 50.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 17.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="StaminaBar" type="ProgressBar" parent="."]
modulate = Color(0, 0.227451, 0.752941, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -329.0
offset_top = 57.0
offset_right = 330.0
offset_bottom = 84.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_w1wfi")
theme_override_styles/fill = SubResource("StyleBoxFlat_7vx7s")
value = 50.0
show_percentage = false

[node name="StaminaLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 57.0
offset_right = 20.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_73srf")
}
